// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should render correctly 1`] = `
<DocumentFragment>
  <div
    aria-describedby="tooltip-6c756c756c756c756c756c756c756c75"
  >
    Hover me
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly without text 1`] = `
<DocumentFragment>
  Hover me
</DocumentFragment>
`;
